[package]
name = "code-evolution-insights"
version = "0.1.0"
authors = ["Anderson Alves <anderson_sa@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
structopt = "0.2.10"