[package]
name = "code-evolution-insights"
version = "0.1.0"
authors = ["Anderson Alves <anderson_sa@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
actix-files = "0.1.6"
structopt = "0.2.10"